--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Repository-specific
+# Ignore the test_output directories
+test/func_test/test_output/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
